# image_processor

tasks/admission/: admission.cpp
tasks/associative_operation/: associative_operation.cpp
tasks/cow/: cow_string.cpp  cow_string.h
tasks/image_processor/: CMakeLists.txt  application.cpp  application.h  bitmap.cpp  bitmap.h  creators.cpp  creators.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.h  filter_description.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  image_processor.cpp  matrix_filter.cpp  matrix_filter.h  mirror.cpp  mirror.h  negative.cpp  negative.h  parser.h  pipeline.cpp  pipeline.h  sharpening.cpp  sharpening.h  tmatrix.h
tasks/mines/: minesweeper.cpp  minesweeper.h
tasks/multiplication/: multiplication.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/poly/: poly.cpp  poly.h
tasks/scorer/: scorer.cpp
tasks/scorer2/: scorer.cpp  scorer.h
tasks/sort_students/: sort_students.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
tasks/unixpath2/: unixpath.cpp  unixpath.h
tasks/word2vec/: word2vec.cpp
tasks/zip2/: zip.h
